# ZocketAssignment

./: .gitignore  Dockerfile  README.md  add_rewriter.py  app.py  experiment.ipynb  final_extraction.py  hello.py  initaian_question_list.py  inital_search_results.py  initial_extractor.py  main.py  models.py  prompts.py  pyproject.toml  questions_genaration.py  simplesearc.py  slogan_analysisagant.py  streamlit_app.py
image_genarator/: image_gen.ipynb
rewriter/: rewriter.ipynb
slogan_genarator/: data.ipynb
